# Arkyo

./: .gitignore  Cargo.toml  License  README.md
src/: lib.rs  main.rs  modules.rs
src/core/: _middleware.rs  _pipeline.rs  _route.rs  _server.rs  middleware.rs  mod.rs  path.rs  pipeline.rs  route.rs  server.rs
src/middlewares/: mod.rs
src/modules/: connection.rs  http.rs  middleware.rs  request.rs  response.rs  route.rs  server.rs
src/network/: _request.rs  _response.rs  method.rs  mod.rs  request.rs  response.rs  status.rs
