[package]
name = "arkyo"
license = "MIT"
edition = "2021"
version = "0.0.7"
authors = ["DhavyLTS", "Velasco"]
description = "Arkyo is a library for making HTTP Server"

[dependencies]
regex = "~1.10"
wasm-bindgen = { version =  "~0.2", optional = true, default-features = false }
lazy_static = "~1.4"
strum = "~0.26"
strum_macros = "~0.26"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[features]
dto = ["dep:wasm-bindgen"]
rpc = ["dep:wasm-bindgen"]
