[package]
name = "arkyo"
license = "MIT"
edition = "2021"
version = "0.0.7"
authors = ["DhavyLTS", "Velasco"]
description = "Arkyo is a library for making HTTP Server"

[dependencies]
regex = "~1.10"
wasm-bindgen = { version =  "~0.2", optional = true, default-features = false }
lazy_static = "~1.4"
strum = "~0.26"
strum_macros = "~0.26"

[dev-dependecies]
color-eyre = "~0.6"
rstest = "~0.18"
const_panic = "~0.2"
proptest = "~1.4"

[lints.rust]
unsafe_code =  "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"

[features]
dto = ["dep:wasm-bindgen"]
rpc = ["dep:wasm-bindgen"]
